--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://ninacressoni.github.io/StarWarsShop",
-  "name": "StarWarsShop",
+  "name": "redux_shooping-cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,8 +16,6 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,12 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-<<<<<<< HEAD
-    "gh-pages": "^2.2.0"
-=======
-    "gh-pages": "^2.1.1"
->>>>>>> 59dfa830c05f21c153501b6dcfaad93b6a14afde
   }
 }
